--- a/client/src/styles/modules/layout/_dashboard-sidebar.scss
+++ b/client/src/styles/modules/layout/_dashboard-sidebar.scss
@@ -21,7 +21,7 @@
 
     .header-logo {
       // height: calc(#{$header-height} - .5rem);
-      width: 100%;
+      width: auto;
       object-fit: contain;
       margin: auto;
     }
